<resources>

    <string name="navigation_drawer_open" translatable="false">drawer_open</string>
    <string name="navigation_drawer_close" translatable="false">drawer_close</string>

    <string name="app_name">M3rsna</string>
    <string name="generalError">an Error Occurred Please Try Again Later</string>
    <string name="language">عربي</string>
    <string name="enter">Login</string>
    <string name="woman">Women</string>
    <string name="men">Men</string>
    <string name="all">All</string>
    <string name="logout">Logout</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="area">Area</string>
    <string name="showOnMap">Show On Map</string>
    <string name="kuwaitCurrency">KWD</string>
    <string name="adTitle">Ad Title</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zone">Zone</string>
    <string name="secondNumber">Second Phone Number</string>
    <string name="whatsNumber">WhatsApp Number</string>
    <string name="add">Add</string>
    <string name="editProfile">Edit Profile</string>
    <string name="myAds">My Ads</string>
    <string name="mySubscription">My Subscription</string>
    <string name="changePassword">Change Password</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="instagramLink">Instagram Link</string>
    <string name="save">Save</string>
    <string name="aboutCompany">About Company</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="forgetPass">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="agree">Agree For</string>
    <string name="terms">Terms And Conditions</string>
    <string name="companyProducts">Company Products</string>
    <string name="companyName">Company Name</string>
    <string name="payFromPackage">Pay From Package</string>
    <string name="title">Title</string>
    <string name="agreeForTerms">Agree For Terms And Conditions First</string>
    <string name="enterName">Enter Name</string>
    <string name="enterPhone">Enter Phone Number</string>
    <string name="enterPassword">Enter Password</string>
    <string name="invalidPhone">Invalid Phone Number</string>
    <string name="passwordChangedSuccessfully">Password Changed Successfully</string>
    <string name="myAccount">My Account</string>
    <string name="enterOldPassword">Enter Current Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterConfirmPassword">Confirm New Password</string>
    <string name="passwordMisMatched">Password Is Mismatched</string>
    <string name="invalidPassword">Password Is Too Short</string>
    <string name="login2">Login</string>
    <string name="checkYourMail">Check You Email, Message has Sent To You </string>
    <string name="recoverPassword">Recover Password</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="invalidEmail">Invalid Email Address</string>
    <string name="invalidLink">Link Is Invalid</string>
    <string name="thanksMessage">Thanks For You Contact With Us, Your Message Is Sent,  We will Go Back To You  at the Earliest</string>
    <string name="enterMessage">Enter Your Message</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="selectPackage">Select Package</string>
    <string name="adsNumber">Ads Number:</string>
    <string name="adPosition">Ad Position:</string>
    <string name="daysNumber">Days Number Per Ad:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="removeVideoFirst">Can\'t Add More One Video, Remove the current Video First</string>
    <string name="videoDuration">Video Duration Should be Less Than 120 seconds</string>
    <string name="canNotCompress">Can\'t Compress The Video Please Try Again Laterا</string>
    <string name="price">Price:</string>
    <string name="duration">Duration:</string>
    <string name="days">Days</string>
    <string name="enterAdTitle">Enter Ad Title</string>
    <string name="enterAdDescription">Enter Ad Description</string>
    <string name="selectCategory">Select Category</string>
    <string name="selectCountry">Select Country</string>
    <string name="adAddedSuccessfully">Ad Is Added Successfully</string>
    <string name="addAd">Add New Ad</string>
    <string name="subscriptionSuccessfully">Your Subscription Done Successfully</string>
    <string name="OperationFailed">Payment Operation Failed</string>
    <string name="invalidePhoneORPassword">Phone Or Password Incorrect</string>
    <string name="noConnection">There Is No Internet Connection</string>
    <string name="sessionLogout">Your Session Is Finished , Please Login Again</string>
    <string name="noEnoughBalance">Sorry , No Enough Balance For Adding New Ad</string>
    <string name="oldPasswordIncorrect">Old Password Incorrect</string>
    <string name="noNotificationsFound">No Notifications For Showing</string>
    <string name="emailExists">Email Address Already Exist</string>
    <string name="continueAsGuest">Continue</string>
    <string name="invalidSecondPhone">Second Phone Number Invalid</string>
    <string name="invalidWhatsPhone">Whats Number Invalid</string>
    <string name="selectOneImage">Select at Least One Image In Ad</string>
    <string name="locationNotAvailable">Location Is Not Available</string>
    <string name="whatsNumberNotAvailable">Whats App Number Is Not Available</string>
    <string name="whatsAppNotFound">WhatsApp Number Not Found On Your Phone</string>
    <string name="instagramLinkNotAvailable">Instagram Link Not Available</string>
    <string name="logo">Logo</string>
    <string name="phoneExists">Phone Number Already Exist</string>
    <string name="enterInstagramLink">Enter Your Instagram Link</string>
    <string name="profileUpdatedSuccessfully">Your Profile Updated Successfully</string>
    <string name="favoritesListIsEmpty">Favorites List Is Empty</string>
    <string name="noProductsFound">No Product Found For Showing</string>
    <string name="noAdsFound">No Ads Found For Showing</string>
    <string name="noFavoritesFound">Favorites List Is Empty</string>
    <string name="checkAdOnApp">For Showing Ad Details Download (M3resna App)</string>
    <string name="adUpdatedSuccessfully">Ad Updated Successfully</string>
    <string name="renew">Renew Package</string>
    <string name="addNewPackage">Add Package</string>
    <string name="remainAds">Remain Ads:</string>
    <string name="mySubscriptions">My Subscriptions</string>
    <string name="noSubscriptionsFound">No Subscriptions For Showing</string>
    <string name="renewPackageSuccessfully">package Is Renewed Successfully</string>
    <string name="fromDate">From Date:</string>
    <string name="toDate">To Date:</string>
    <string name="selectType">Select Type</string>
    <string name="selectCity">Select City</string>
<string name="selectZone">Select Zone</string>
    <string name="pickLocation">Add Location</string>
    <string name="fiveImagesOrLess">Can\'t Add More Than 5 Images for Ad</string>
    <string name="sureForDelete">Are You Sure For Deleting This Ad ?</string>
    <string name="day">Days</string>
    <string name="description">Description</string>
    <string name="mediaErrorMsg">The Maximum Number of Images that can be added is 5 Images \n The Maximum Number of Videos that can be added is 1 Video</string>
    <string name="productDetails">Details</string>
    <string name="android">Android</string>
    <string name="iPhone">iPhone</string>
    <string name="myPackages">My Packages</string>
    <string name="addPackage">Add Package</string>
    <string name="selectPaymentMethod">Select Payment Method</string>
    <string name="getDirections">Get Directions</string>
    <string name="credit">Credit</string>
    <string name="availableCredit">available Credit:</string>
    <string name="changeCountry">Country</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="paymentDetails">Payment History</string>
    <string name="noPaymentHistory">Payment History Is Empty</string>
    <string name="details">Details</string>
    <string name="buy">Buy</string>
    <string name="views">Views</string>
    <string name="endAd">Ad Will Expired After</string>
    <string name="renewAd">Renew</string>
    <string name="myCredit">My Credit</string>
</resources>
