<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@mipmap/logo_side_menu" />

    <LinearLayout
        android:id="@+id/menu_main_ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="32dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_profile_sel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grayDark"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/login2" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menu_main_ll_aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grayDark"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/aboutUs" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menu_main_ll_contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_contact_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grayDark"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/contactUs" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/menu_main_ll_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_flag" />

        <TextView
            android:id="@+id/menu_main_tv_countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grayDark"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/country" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/menu_main_ll_changeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp">

    <ImageView
            android:id="@+id/menu_main_iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_language_yellow" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grayDark"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/language" />

    </LinearLayout>
</LinearLayout>