<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_login_cl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fragment_about_us_iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

            <EditText
                android:id="@+id/fragment_login_et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@mipmap/box_input"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="viewStart"
                android:textColor="@color/grayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_about_us_iv_logo" />


            <EditText
                android:id="@+id/fragment_login_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/box_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="24dp"
                android:textAlignment="viewStart"
                android:textColor="@color/grayDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/fragment_login_et_phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fragment_login_et_phone"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_phone" />


            <TextView
                android:id="@+id/fragment_login_tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="32dp"
                android:text="@string/forgetPass"
                android:textColor="@color/grayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_password" />

            <TextView
                android:id="@+id/fragment_login_tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@mipmap/bg_btn_login"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/fragment_login_et_password"
                app:layout_constraintStart_toStartOf="@+id/fragment_login_et_password"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_forgetPassword" />

            <TextView
                android:id="@+id/fragment_login_tv_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@mipmap/bg_btn_register"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/fragment_login_tv_login"
                app:layout_constraintStart_toStartOf="@+id/fragment_login_tv_login"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_login"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>