<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_payment_methods">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/selectPaymentMethod"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_payment_paymentMethods_rv_methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_payment_paymentMethods_rv_methods">

        <Button
            android:id="@+id/dialog_payment_methods_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/grayDark"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="328dp"
            tools:layout_editor_absoluteY="490dp" />

        <Button
            android:id="@+id/dialog_payments_methods_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="513dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>