<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray2"
    android:id="@+id/fragment_change_password_cl_container">
    
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/oldPassword"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fragment_change_password_et_oldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                android:background="@mipmap/box_input"
                android:ems="10"
                android:textAlignment="viewStart"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                android:textColor="@color/grayDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPassword"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_et_oldPassword" />

    <EditText
                android:id="@+id/fragment_change_password_et_newPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@mipmap/box_input"
                android:ems="10"
        android:textAlignment="viewStart"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/grayDark"
                app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_oldPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_newPassword"
        app:layout_constraintTop_toBottomOf="@+id/fragment_change_password_et_newPassword" />

    <EditText
                android:id="@+id/fragment_change_password_et_confirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@mipmap/box_input"
                android:ems="10"
        android:textAlignment="viewStart"
                android:textSize="14sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="textPassword"
                android:textColor="@color/grayDark"
                app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_newPassword"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/fragment_change_password_tv_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@mipmap/bg_btn_add"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_change_password_et_confirmPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fragment_change_password_et_confirmPassword" />

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>